# zephyr

./: .gitignore  .gitmodules  CREDITS.md  Cargo.toml  EXPORT-FORMAT.md  LICENSE  LICENSE-ASSETS  README.md  rustfmt.toml
.github/workflows/: release.yml
examples/: foxy.json  foxy.zephyr
examples/MonoGame/: AnimatedSprite.cs  Game1.cs  Program.cs  ZephyrAtlas.cs  ZephyrMonoGameExample.csproj  ZephyrMonoGameExample.slnx  app.manifest
images/: zephyr_icon_sketch.xcf  zephyr_sketch.xcf
src/: app.rs  atlas.rs  cli.rs  errors.rs  export.rs  geometry.rs  loader.rs  main.rs  packing.rs  types.rs
src/app/: animation_list_panel.rs  animation_panel.rs  atlas_settings_panel.rs  chrome.rs  file_ops.rs  preview_panel.rs  settings_panel.rs  sprite_panel.rs  sprite_properties_panel.rs  state.rs  thumbnails.rs  tree_panel.rs
src/types/: animation.rs  enums.rs  hitbox.rs  project.rs  settings.rs  sprite.rs  tree.rs
tests/fixtures/: minimal.zephyr
