[package]
name = "zephyr"
version = "0.2.1"
edition = "2024"
description = "Texture packer and sprite editor with animation support for 2D games"
license = "MIT"
homepage = "https://github.com/aristurtledev/zephyr"
repository = "https://github.com/aristurtledev/zephyr"
authors = ["Christopher Whitley (AristurtleDev)"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui-phosphor = "0.11.0"
egui_ltreeview = { path = "external/egui_ltreeview" }
image = "0.25.9"
rand = "0.10.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"


